--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@nx/angular": "19.4.0",
+    "@nx/devkit": "19.4.0",
+    "@nx/plugin": "^19.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -32,11 +34,14 @@
     "@nx/eslint-plugin": "19.4.0",
     "@nx/jest": "19.4.0",
     "@nx/js": "19.4.0",
+    "@nx/vite": "^19.4.0",
     "@nx/workspace": "19.4.0",
     "@schematics/angular": "~18.0.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
@@ -44,6 +49,7 @@
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "glob": "^10.4.2",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
