--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@demo/implicit-libs": ["tools\\plugins\\implicit-libs\\index.ts"],
+      "@demo/my-lib": ["libs\\my-lib\\index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
